--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,8 @@ align-items: center;
 
 .doctorsOffice h2{
   font-size: 65px;
-  margin: 0 26.1vw 0 0;
+  margin: 0 376px 0 0;
+  max-width: 450px;
 }
 
 .doctorsOffice p a{
@@ -559,6 +560,7 @@ align-items: center;
   flex-basis: auto;
   overflow: hidden;
   margin: 0 0 0 150px;
+  position: relative;
 }
 
 .officeHeading{
@@ -576,6 +578,8 @@ align-items: center;
   align-items: center;
   z-index: 999;
   margin-bottom: 10px;
+  position: absolute;
+  right: 169px;
 }
 
 .officeHeading div:hover{
@@ -595,7 +599,7 @@ align-items: center;
   display: flex;
   flex-direction: column;
   width: 700px;
-  margin: 70px 0 0 10.4vw;
+  margin: 70px 0 0 150px;
 
 }
 
@@ -607,11 +611,11 @@ align-items: center;
 .officeNav{
   font-size: 22px;
   font-weight: normal;
-  margin: 60px 0 0 10.4vw;
+  margin: 60px 0 0 150px;
 }
 
 .officeNav a{
-  margin-right: 3.5vw;
+  margin-right: 50px;
   color: inherit;
   
 }
@@ -850,7 +854,7 @@ width: 16.9vw;
 /* Office Hours section */
 
 .officeHours{
-  padding: 82px 0 100px 0;
+  padding: 85px 0 100px 0;
    
 
 }
